--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -3,6 +3,86 @@
     padding: 0px;
     font-family: sans-serif;
 }
+/* nav{
+	display: flex;
+	background-color: rgb(134, 226, 208);
+	justify-content: space-around;
+	color: #fff;
+	height: 70px;
+	align-items: center;
+}
+nav .logo {
+	font-family: 'Montserrat', sans-serif;
+	letter-spacing: 3px;
+}
+nav ul{
+	display: flex;
+	list-style: none;
+	width: 40%;
+	justify-content: space-between;
+}
+nav ul li a {
+	color:rgba(27, 158, 77, 0.89);
+	text-decoration: none;
+	font-size: 0.8em;
+}
+nav ul li a:hover {
+	background-color: rgb(134, 226, 208);
+	color: #fff;
+}
+.active {
+	background-color: rgb(134, 226, 208);
+	color: #fff;
+}
+.banner {
+	height: 60vh;
+	background-image: url('./img/spam.jpg');
+	background-size: cover;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.banner:after {
+	content:'';
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(20, 143, 119, .6);
+}
+.banner h4 {
+	color: #fff;
+	z-index: 1;
+	padding: 20px 25px;
+	border:3px solid #fff;
+}
+section {
+	padding:50px 0;
+}
+.label {
+	background-color: rgba(20, 143, 119, .6);
+	color: #fff;
+}
+@media screen and(max-width: 768px){
+	header ul{
+		width: 50%;
+	}
+}
+@media screen and(max-width: 576px){
+	header ul{
+		display: none;
+	}
+} */
+
+
+
+
+
+
+
 a {
 	color: rgba(27, 158, 77, 0.89);
 	text-decoration: none;
@@ -70,4 +150,25 @@ section {
 .label {
 	background-color: rgba(20, 143, 119, .6);
 	color: #fff;
+}
+/* @media screen and(max-width: 768px){
+	header ul{
+		width: 50%;
+	}
+}
+@media screen and(max-width: 576px){
+	header ul{
+		display: none;
+	}
+} */
+@media screen and (max-width: 768px){
+	header ul{
+		width: auto;
+		float: none;
+	}
+}
+@media screen and (max-width: 480px) { 
+	header ul{
+		height: auto; 
+	}
 }
